--- a/scrolls-dark.css
+++ b/scrolls-dark.css
@@ -18,8 +18,6 @@
 }
 
 .dropdown-menu {
-    background-color: #364452 !important;
-    border-color: #9EAEBF !important;
 }
 
 @font-face {
@@ -66,7 +64,7 @@ body {
 #write {
     color: #fef7f0;
     margin: 0 auto;
-    max-width: 800px;
+    max-width: auto;
     padding: 30px;
     padding-bottom: 100px;
     position: static;
@@ -144,7 +142,7 @@ ol:last-child {
     margin-bottom: 0;
 }
 
-/* 
+
 #write > ul.ul-list {
     list-style: none !important;
 }
@@ -158,7 +156,7 @@ ol:last-child {
     width:9px;
     height:9px;
     border-radius: 50%;
-    /* background: #fef7f0;
+    background: #fef7f0;
     background: #9daebf;
     position: absolute;
     left:-20px;
@@ -261,7 +259,7 @@ ol:last-child {
     font-weight: bold;
     position: absolute;
     left: -83px;
-} */
+}
 
 
 input[type=checkbox]{
