Fix: 1. 优化代码块背景颜色

--- a/scrolls-dark.css
+++ b/scrolls-dark.css
@@ -1121,7 +1121,7 @@ img{
 
 .cm-s-inner.CodeMirror,
 .cm-s-inner .CodeMirror-gutters {
-    background-color: #364452 !important;
+    background-color: #303D49 !important;
     border: 1px solid #324560;
     /* padding: 10px 20px; */
 }
